--- a/app/index_backup.html
+++ b/app/index_backup.html
@@ -12,7 +12,6 @@
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="/bower_components/leaflet/dist/leaflet.css">
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -25,34 +24,28 @@
     <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <div class="container-fluid">
-      <div class="header" id>
+    <div class="container">
+      <div class="header">
         <h3 class="text-muted">Fractal Generator - Liam Gomez</h3>
       </div>
 
       <div class="row">
+        <div class="col-lg-12">
 
-        <div class="col-lg-10">
-          <div id="map_wrapper">
-            <div id="fractal_map"></div>
-          </div>
-        </div>
-        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2" id="controls">
-            
+          <div id="fractal_map"></div>
+
         </div>
       </div>
 
       <div class="footer">
-        <p>Liam Gomez - CS491</p>
+        <p>♥ from the Yeoman team</p>
       </div>
     </div>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/bower_components/dat.gui/build/dat.gui.js"></script>
-    <script src="/bower_components/leaflet/dist/leaflet-src.js"></script>
-    <script src="/bower_components/colz/public/js/colz.class.js"></script>
+    <script src="/bower_components/dat.gui/index.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
@@ -81,19 +74,21 @@
         var map = L.map('fractal_map', {minZoom:1});
         map.setView([0, -90], 2); 
         var numWorkers = 3;
-
+// 254, 74, 73,
+// 255, 147, 79,
+// 194, 232, 18,
+// 182, 239, 212,
+// 145, 245, 173,
         var fractalController = {
             appControls: {
                 type: 'mandlebrot',
                 customColors: false,
+                backgroundColor: [ 255, 147, 79 ],
                 fractalColor1: [ 194, 232, 18 ],
-                fractalColor2: [49,209,133],
-                fractalColor3: [255,147,79],
-                fractalColor4: [98,30,244],
+                fractalColor2: [ 182, 239, 212 ],
                 juliaCR: -0.74543,
                 juliaCI: 0.11301,
-                maxItt: 300,
-                colorPreset:'orange'
+                maxItt: 300
             },
 
             activeLayer: null,
@@ -116,86 +111,38 @@
 
         // Setup Dat Gui
         window.onload = function() {
-            var gui = new dat.GUI({autoPlace: false});
-            var rightPane = document.getElementById('controls');
-            rightPane.appendChild(gui.domElement);
+            let gui = new dat.GUI({ autoPlace: false });
 
             // Choose from accepted values
-            var controller = gui.add(fractalController.appControls, 'type', [
-                'mandlebrot',
-                'julia',
-                'burningShip',
-                'multibrot3',
-                'multibrot4',
-                'juliacubed'
-            ]);
-            var presetController = gui.add(fractalController.appControls, 'colorPreset', [
-                'grayscale',
-                'orange',
-                'blue',
-                'rainbow',
-                'wobniar',
-                'test',
-                'YourColor'
-            ]);
-
+            var controller = gui.add(fractalController.appControls, 'type', [ 'mandlebrot', 'julia', 'burningShip', 'multibrot3'] );
             var customColors = gui.add(fractalController.appControls, 'customColors');
-            var colorCont1 = gui.addColor(fractalController.appControls, 'fractalColor1');
-            var colorCont2 = gui.addColor(fractalController.appControls, 'fractalColor2');
-            var colorCont3 = gui.addColor(fractalController.appControls, 'fractalColor3');
-            var colorCont4 = gui.addColor(fractalController.appControls, 'fractalColor4');
-            var juliaMaxItt = gui.add(fractalController.appControls, 'maxItt', 1, 1000).step(5);;
+            var colorCont1 = gui.addColor(fractalController.appControls, 'backgroundColor');
+            var colorCont2 = gui.addColor(fractalController.appControls, 'fractalColor1');
+            var colorCont3 = gui.addColor(fractalController.appControls, 'fractalColor2');
+            var juliaMaxItt = gui.add(fractalController.appControls, 'maxItt', 1, 1000);
             var juliaCICont = gui.add(fractalController.appControls, 'juliaCI', -2.0, -0.01);
-            var juliaCRCont = gui.add(fractalController.appControls, 'juliaCR', 0.1, 1);
+            var juliaCRCont = gui.add(fractalController.appControls, 'juliaCR', 0.1, -0.01);
 
             // Handle fractal selection changes 
             controller.onFinishChange(function(value) {
                 fractalController.setLayer(value);
-                map.setView([0, -90], 2);
             });
-            customColors.onFinishChange(function() {
-                fractalController.reloadLayer();
-            });
+
             // Handle color schemes
             colorCont1.onFinishChange(function() {
-                if(fractalController.appControls.colorPreset == 'YourColor') {
-                    fractalController.reloadLayer();
-                }
-            });
-            colorCont2.onFinishChange(function() {
-                if(fractalController.appControls.colorPreset == 'YourColor') {
-                    fractalController.reloadLayer();
-                }
-            });
-            colorCont3.onFinishChange(function() {
-                if(fractalController.appControls.colorPreset == 'YourColor') {
-                    fractalController.reloadLayer();
-                }
-            });
-            colorCont4.onFinishChange(function() {
-                if(fractalController.appControls.colorPreset == 'YourColor') {
-                    fractalController.reloadLayer();
-                }
-            });
-            juliaMaxItt.onFinishChange(function() {
                 fractalController.reloadLayer();
             });
-            juliaCICont.onFinishChange(function() {
-                if (fractalController.currentType == 'julia') {
-                    fractalController.reloadLayer();
-                }
+            colorCont2.onFinishChange(function() {
+                fractalController.reloadLayer();
             });
-            juliaCRCont.onFinishChange(function() {
-                if (fractalController.currentType == 'julia') {
-                    fractalController.reloadLayer();
-                }
-            });
-            presetController.onFinishChange(function(){
+            colorCont3.onFinishChange(function() {
                 fractalController.reloadLayer();
             });
 
             // set default layer
             fractalController.setLayer('mandlebrot');
+            var customContainer = document.getElementById('fractal_map');
+            customContainer.appendChild(gui.domElement);
         };
     </script>
   </body>
