Added color randomization, ui fixes, fullscreen

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,8 @@
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/randomcolor/0.4.4/randomColor.js"></script>
+    <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' rel='stylesheet' />
   </head>
   <body>
     <!--[if lt IE 10]>
@@ -52,6 +53,7 @@
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/dat.gui/build/dat.gui.js"></script>
     <script src="/bower_components/leaflet/dist/leaflet-src.js"></script>
+    <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
     <script src="/bower_components/colz/public/js/colz.class.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
