Added leaflet and dat.gui to gulp

--- a/app/index.html
+++ b/app/index.html
@@ -12,12 +12,12 @@
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.css' />
+    <link rel='stylesheet' href='/bower_components/dat.gui/build/dat.gui.css' />
+    <link rel='stylesheet' href='/bower_components/leaflet/dist/leaflet.css' />
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:css styles/main.css -->
-    <link rel="stylesheet" href="/bower_components/leaflet/dist/leaflet.css" />
-    <link rel="stylesheet" href="/bower_components/dat.gui/build/dat.gui.css" />
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
@@ -54,6 +54,8 @@
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/dat.gui/build/dat.gui.js"></script>
+    <script src="/bower_components/leaflet/dist/leaflet-src.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
@@ -73,8 +75,6 @@
     <!-- endbuild -->
     
     <!-- build:js scripts/main.js -->
-    <script src="/bower_components/dat.gui/build/dat.gui.min.js"></script>
-    <script src="/bower_components/leaflet/dist/leaflet.js"></script>
     <script src='scripts/Leaflet.fullscreen.min.js'></script>
     <script src="scripts/MapLayer.js"></script>
     <script src="scripts/appSetup.js"></script>
